--- a/package.json
+++ b/package.json
@@ -3,8 +3,15 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "babel": {
+    "presets": [
+      "@babel/preset-env",
+      "@babel/preset-react"
+    ]
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack",
+    "dev": "webpack-dev-server --open --hot"
   },
   "repository": {
     "type": "git",
@@ -16,5 +23,24 @@
   "bugs": {
     "url": "https://github.com/CSGamers/kingdomino/issues"
   },
-  "homepage": "https://github.com/CSGamers/kingdomino#readme"
+  "homepage": "https://github.com/CSGamers/kingdomino#readme",
+  "dependencies": {
+    "@babel/core": "^7.2.0",
+    "@babel/preset-env": "^7.2.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.4",
+    "clean-webpack-plugin": "^1.0.0",
+    "concurrently": "^4.1.0",
+    "css-loader": "^2.0.0",
+    "express": "^4.16.4",
+    "html-webpack-plugin": "^3.2.0",
+    "nodemon": "^1.18.8",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
+    "redux": "^4.0.1",
+    "style-loader": "^0.23.1",
+    "webpack": "^4.27.1",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10"
+  }
 }
