--- a/package.json
+++ b/package.json
@@ -29,15 +29,18 @@
     "@babel/preset-env": "^7.2.0",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.4",
+    "body-parser": "^1.18.3",
     "clean-webpack-plugin": "^1.0.0",
     "concurrently": "^4.1.0",
     "css-loader": "^2.0.0",
     "express": "^4.16.4",
     "html-webpack-plugin": "^3.2.0",
     "nodemon": "^1.18.8",
+    "path": "^0.12.7",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "redux": "^4.0.1",
+    "sequelize": "^4.41.2",
     "style-loader": "^0.23.1",
     "webpack": "^4.27.1",
     "webpack-cli": "^3.1.2",
