--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "html-webpack-plugin": "^3.2.0",
     "nodemon": "^1.18.8",
     "react": "^16.6.3",
+    "react-dnd": "^7.0.2",
+    "react-dnd-html5-backend": "^7.0.2",
     "react-dom": "^16.6.3",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1",
