--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "webpack-dev-server": "^3.1.10"
   },
   "devDependencies": {
+    "file-loader": "^2.0.0",
     "redux-devtools-extension": "^2.13.7"
   }
 }
