--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "scripts": {
     "build": "webpack",
-    "dev": "webpack-dev-server --open --hot"
+    "dev": "webpack-dev-server --open --hot",
+    "server": "nodemon src/server/server.js"
   },
   "repository": {
     "type": "git",
@@ -35,8 +36,8 @@
     "css-loader": "^2.0.0",
     "express": "^4.16.4",
     "html-webpack-plugin": "^3.2.0",
-    "nodemon": "^1.18.8",
     "path": "^0.12.7",
+    "pg": "^7.7.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-redux": "^6.0.0",
@@ -48,6 +49,7 @@
     "webpack-dev-server": "^3.1.10"
   },
   "devDependencies": {
-    "redux-devtools-extension": "^2.13.7"
+    "redux-devtools-extension": "^2.13.7",
+    "nodemon": "^1.18.8"
   }
 }
