--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "body-parser": "^1.18.3",
     "clean-webpack-plugin": "^1.0.0",
     "concurrently": "^4.1.0",
+    "cors": "^2.8.5",
     "css-loader": "^2.0.0",
     "express": "^4.16.4",
+    "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
     "path": "^0.12.7",
     "pg": "^7.7.1",
